# plamatrix

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_cases.cpp  benchmark_cases.cu  benchmark_cases.h  main.cpp  report_writer.cpp  report_writer.h
cmake/: plamatrixConfig.cmake.in
docs/: architecture.md  build.md  contributing.md  index.md
docs/api/: dense-matrix.md  linear-algebra.md  point-cloud.md  sparse-matrix.md
docs/examples/: basic-operations.cpp  point-cloud-registration.cpp  point-transform.cpp  sparse-solver.cpp
docs/superpowers/plans/: 2026-05-06-plamatrix-implementation.md
docs/superpowers/specs/: 2026-05-06-plamatrix-design.md
include/plamatrix/: plamatrix.h
include/plamatrix/core/: allocator.h  device_matrix.h  error_check.h  no_cuda_stubs.h  parallel.h  types.h
include/plamatrix/dense/: dense_matrix.h  dense_ops.h
include/plamatrix/ops/: decomposition.h  gemm.h  point_cloud.h  solver.h
include/plamatrix/sparse/: coo_matrix.h  csr_matrix.h
src/: CMakeLists.txt  plamatrix.cu
src/dense/: dense_matrix.cu  dense_ops.cu
src/ops/: decomposition.cu  decomposition_cpu.cpp  fortran_linalg.h  gemm.cu  gemm_cpu.cpp  point_cloud.cu  point_cloud_cpu.cpp  solver.cu  solver_cpu.cpp
src/sparse/: csr_matrix.cpp
test/: CMakeLists.txt  test_main.cpp
test/integration/: cpu_gpu_consistency_test.cpp  no_cuda_behavior_test.cpp  numpy_reference_test.cpp  point_cloud_workflow_test.cpp
test/reference/: generate_reference.py
test/unit/core/: allocator_test.cpp  device_matrix_test.cpp  parallel_test.cpp
test/unit/dense/: dense_matrix_test.cpp  dense_ops_test.cpp
test/unit/ops/: decomposition_test.cpp  gemm_test.cpp  point_cloud_test.cpp  solver_test.cpp
test/unit/sparse/: coo_matrix_test.cpp  csr_matrix_test.cpp
